--- a/stankinsv2/solution/StankinsV2/StankinsHelperCommands/StankinsHelperCommands.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsHelperCommands/StankinsHelperCommands.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\Stankins.Process\Stankins.Process.csproj" />
     <ProjectReference Include="..\Stankins.Rest\Stankins.Rest.csproj" />
     <ProjectReference Include="..\Stankins.SimpleRecipes\Stankins.SimpleRecipes.csproj" />
+    <ProjectReference Include="..\Stankins.Trello\Stankins.Trello.csproj" />
     <ProjectReference Include="..\Stankins.Version\Stankins.Version.csproj" />
     <ProjectReference Include="..\Stankins.XML\Stankins.XML.csproj" />
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
