--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -27,6 +27,7 @@
     <None Remove="Assets\JSON\json1.txt" />
     <None Remove="Assets\JSON\json1Record.txt" />
     <None Remove="Assets\JSON\trello.txt" />
+    <None Remove="Assets\JSON\trelloAlphabet.txt" />
     <None Remove="Assets\otherbooksmarks.html" />
     <None Remove="Assets\XML\nbrfxrates.xml" />
     <None Remove="Assets\yaml\myp.myml" />
@@ -34,6 +35,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\HTML\AmazonCopyStackOverflow.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\JSON\trelloAlphabet.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\JSON\trello.txt">
