--- a/stankinsv2/solution/StankinsV2/Stankins.Console/Properties/launchSettings.json
+++ b/stankinsv2/solution/StankinsV2/Stankins.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Stankins.Console": {
       "commandName": "Project",
-      "commandLineArgs": "recipes -e ExportDBDiagramHtmlAndDot"
+      "commandLineArgs": "execute  -o SenderOutputToFolder -a exports -a false"
     }
   }
 }
