--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/StankinsTestXUnit.csproj
@@ -24,6 +24,7 @@
     <None Remove="Assets\bookmarks_11_17_17.html" />
     <None Remove="Assets\bookmarks_11_17_17N.html" />
     <None Remove="Assets\HTML\AmazonCopyStackOverflow.html" />
+    <None Remove="Assets\JSON\CachetV1Simple.txt" />
     <None Remove="Assets\JSON\json1.txt" />
     <None Remove="Assets\JSON\json1Record.txt" />
     <None Remove="Assets\JSON\trello.txt" />
@@ -35,6 +36,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\HTML\AmazonCopyStackOverflow.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\JSON\CachetV1Simple.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\JSON\trelloAlphabet.txt">
@@ -102,6 +106,7 @@
     <ProjectReference Include="..\Stankins.Alive\Stankins.Alive.csproj" />
     <ProjectReference Include="..\Stankins.AnalyzeSolution\Stankins.AnalyzeSolution.csproj" />
     <ProjectReference Include="..\Stankins.AzureDevOps\Stankins.AzureDevOps.csproj" />
+    <ProjectReference Include="..\Stankins.Cachet\Stankins.Cachet.csproj" />
     <ProjectReference Include="..\Stankins.File\Stankins.FileOps.csproj" />
     <ProjectReference Include="..\Stankins.HTML\Stankins.HTML.csproj" />
     <ProjectReference Include="..\Stankins.Interpreter\Stankins.Interpreter.csproj" />
