--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,8 +44,9 @@ jobs:
     vmImage: 'ubuntu-16.04'
    #condition: eq(variables['stop'],1)
   steps:
-    #- checkout: none #skip checking out the default repository resource
-    
+    - checkout: self #skip checking out the default repository resource
+      clean: true
+  
     - task: DotNetCoreInstaller@0
       displayName: 'Use .NET Core sdk 2.1.503'
       inputs:
@@ -229,6 +230,9 @@ jobs:
     MyVersion: $[ dependencies.SetProps.outputs['setvarStep.PWversion'] ]  # map in the variable
  
   steps:
+    - checkout: self #skip checking out the default repository resource
+      clean: true
+
     - script: echo this is version $(MyVersion)
       name: echovar    
     
@@ -266,7 +270,9 @@ jobs:
   #- checkout: none #skip checking out the default repository resource
   
   #- template: pipelineTemplates/restoreFromArtifact.yml
-  
+  - checkout: self #skip checking out the default repository resource
+    clean: true
+
   - script: |
        rem delete old artifact files
        del *$(Build.BuildId)*.zip 
@@ -540,10 +546,14 @@ jobs:
        rem echo version1 : $MyVersion
        rem echo version2 : $(MyVersion)
        #docker build . --build-arg version=$(MyVersion) -t stankins_linux -f Dockerfile_linux      
+       docker image ls
+       docker container ls
        docker build . -t stankins_linux -f Dockerfile_linux      
        docker image ls
+       docker container ls
        docker tag stankins_linux ignatandrei/stankins_linux
        docker push ignatandrei/stankins_linux
+       #copy linux to artifacts
        docker create --name st stankins_linux
        docker container ls
        docker cp st:/app/ $(Build.ArtifactStagingDirectory)/linux-x64
