execute in console

--- a/stankinsv2/solution/StankinsV2/Stankins.Console/Properties/launchSettings.json
+++ b/stankinsv2/solution/StankinsV2/Stankins.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Stankins.Console": {
       "commandName": "Project",
-      "commandLineArgs": "execute -o ReceiveRestFromFile -a e:\\ignatandrei\\stankins\\stankinsv2\\solution\\StankinsV2\\StankinsTestXUnit\\Assets\\JSON\\jsonAlphabetMoreTables.txt"
+      "commandLineArgs": "execute -o ReceiveRestFromFile -a e:\\ignatandrei\\stankins\\stankinsv2\\solution\\StankinsV2\\StankinsTestXUnit\\Assets\\JSON\\jsonAlphabetMoreTables.txt -o SenderToTypeScript -a \"\" "
     }
   }
 }
