--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -498,13 +498,14 @@ jobs:
         dotnet publish -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.2 -c Release -r win10-x64 stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
         cd stankinsv2/solution/
         xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I /E
-        docker build . -t stankins_windows -f Dockerfile_win
-        docker tag stankins_windows ignatandrei/stankins_windows
-        docker image ls
-        echo before login
-        echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
-        echo after login
-        call docker push ignatandrei/stankins_windows
+        #repair later the windows image
+        #docker build . -t stankins_windows -f Dockerfile_win
+        #docker tag stankins_windows ignatandrei/stankins_windows
+        #docker image ls
+        #echo before login
+        #echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
+        #echo after login
+        #call docker push ignatandrei/stankins_windows
     displayName: 'docker'
 
   - script: |
