--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -498,28 +498,28 @@ jobs:
         dotnet publish -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.2 -c Release -r win10-x64 stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
         cd stankinsv2/solution/
         xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I /E
-        #repair later the windows image
-        #docker build . -t stankins_windows -f Dockerfile_win
-        #docker tag stankins_windows ignatandrei/stankins_windows
-        #docker image ls
-        #echo before login
-        #echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
-        #echo after login
-        #call docker push ignatandrei/stankins_windows
+        echo repair later the windows image
+        rem docker build . -t stankins_windows -f Dockerfile_win
+        rem docker tag stankins_windows ignatandrei/stankins_windows
+        rem docker image ls
+        rem echo before login
+        rem echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
+        rem echo after login
+        rem call docker push ignatandrei/stankins_windows
     displayName: 'docker'
 
   - script: |
         echo start publish windows
-        dotnet publish -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.2 -c Release -r win10-x64 stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
-        cd stankinsv2/solution/
-        xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I /E
-        docker build . -t stankins_windows -f Dockerfile_win
-        docker tag stankins_windows ignatandrei/stankins_windows
-        docker image ls
-        echo before login
-        echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
-        echo after login
-        call docker push ignatandrei/stankins_windows
+        rem dotnet publish -o $(Build.ArtifactStagingDirectory)\win10-x64  -f netcoreapp2.2 -c Release -r win10-x64 stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
+        rem cd stankinsv2/solution/
+        rem xcopy $(Build.ArtifactStagingDirectory)\win10-x64 win10-x64\ /I /E
+        rem docker build . -t stankins_windows -f Dockerfile_win
+        rem docker tag stankins_windows ignatandrei/stankins_windows
+        rem docker image ls
+        rem echo before login
+        rem echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
+        rem echo after login
+        rem call docker push ignatandrei/stankins_windows
     displayName: 'console utility'
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
