added jenkins alive

--- a/stankinsv2/solution/StankinsV2/Stankins.Alive/Stankins.Alive.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Alive/Stankins.Alive.csproj
@@ -8,6 +8,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
+    <ProjectReference Include="..\Stankins.Jenkins\Stankins.Jenkins.csproj" />
     <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
   </ItemGroup>
 </Project>
