cron to the console

--- a/stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsData/StankinsDataWeb.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Stankins.Interpreter\Stankins.Interpreter.csproj" />
+    <ProjectReference Include="..\StankinsCronFiles\StankinsCronFiles.csproj" />
     <ProjectReference Include="..\StankinsHelperCommands\StankinsHelperCommands.csproj" />
   </ItemGroup>
 
