--- a/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Console/Stankins.Console.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\Stankins.Version\Stankins.Version.csproj" />
     <ProjectReference Include="..\Stankins.XML\Stankins.XML.csproj" />
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
+    <ProjectReference Include="..\StankinsCronFiles\StankinsCronFiles.csproj" />
     <ProjectReference Include="..\StankinsHelperCommands\StankinsHelperCommands.csproj" />
     <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
     <ProjectReference Include="..\StankinsReceiverDB\StankinsReceiverDB.csproj" />
