--- a/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <None Remove="Recipes\v1\BNR.txt" />
+    <None Remove="Recipes\v1\BrentOzar.txt" />
     <None Remove="Recipes\v1\ExportAzurePipelinesToDot.txt" />
     <None Remove="Recipes\v1\ExportDBDiagramHtmlAndDot.txt" />
     <None Remove="Recipes\v1\ExportSolutionToHtmlAndDot.txt" />
@@ -13,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Recipes\v1\BrentOzar.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Recipes\v1\ExportDBDiagramHtmlAndDot.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
