--- a/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
@@ -11,6 +11,7 @@
     <None Remove="Recipes\v1\ExportDBDiagramHtmlAndDot.txt" />
     <None Remove="Recipes\v1\ExportSolutionToHtmlAndDot.txt" />
     <None Remove="Recipes\v1\ExportTableToExcelSql.txt" />
+     <None Remove="Recipes\v1\SqlserverVersions.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +31,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Recipes\v1\BNR.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Recipes\v1\SqlserverVersions.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
