--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,4 @@ FakesAssemblies/
 /stankinsv2/solution/StankinsV2/StankinsCordova/www/dist
 /stankinsv2/solution/StankinsV2/StankinsElectron/dist
 /stankinsv2/solution/StankinsV2/StankinsData/exports
+/stankinsv2/solution/StankinsV2/Stankins.Console/exports
