--- a/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Interpreter/Stankins.Interpreter.csproj
@@ -9,6 +9,7 @@
     <None Remove="Recipes\v1\BNR.txt" />
     <None Remove="Recipes\v1\ChuckNorris.txt" />
     <None Remove="Recipes\v1\ExportAzurePipelinesToDot.txt" />
+    <None Remove="Recipes\v1\ExportAzurePipelinesToMermaid.txt" />
     <None Remove="Recipes\v1\ExportDBDiagramHtmlAndDot.txt" />
     <None Remove="Recipes\v1\ExportSolutionToHtmlAndDot.txt" />
     <None Remove="Recipes\v1\ExportTableToExcelSql.txt" />
@@ -18,6 +19,9 @@
 
   <ItemGroup>
     <Content Include="Recipes\v1\ChuckNorris.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Recipes\v1\ExportAzurePipelinesToMermaid.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Recipes\v1\PacktFreeBooks.txt">
