mermaid ok and a hack

--- a/stankinsv2/solution/StankinsV2/Stankins.Console/Properties/launchSettings.json
+++ b/stankinsv2/solution/StankinsV2/Stankins.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Stankins.Console": {
       "commandName": "Project",
-      "commandLineArgs": "recipes -e BrentOzar"
+      "commandLineArgs": "execute -o RecipeFromFilePath -a andrei.txt"
     }
   }
 }
