--- a/stankinsv2/solution/StankinsV2/Stankins.Console/Properties/launchSettings.json
+++ b/stankinsv2/solution/StankinsV2/Stankins.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Stankins.Console": {
       "commandName": "Project",
-      "commandLineArgs": "execute -o RecipeFromFilePath -a andrei.txt"
+      "commandLineArgs": "execute -o YamlReader -a https://raw.githubusercontent.com/ignatandrei/netCoreAlphabet/master/azure-pipelines.yml -o SenderYamlAzurePipelineMermaid -a \"\" -o TransformerConcatenateOutputString -a mermaid.html -o SenderOutputToFolder -a data -a false"
     }
   }
 }
