--- a/stankinsv2/solution/StankinsV2/StankinsObjects/StankinsObjects.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsObjects/StankinsObjects.csproj
@@ -7,4 +7,9 @@
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\newtonsoft.json\9.0.1\lib\netstandard1.0\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
