--- a/stankinsv2/solution/StankinsV2/StankinsObjects/StankinsObjects.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsObjects/StankinsObjects.csproj
@@ -4,6 +4,9 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.4.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
   </ItemGroup>
