--- a/stankinsv2/solution/GenerateAll/TestWEBAPI_DAL/TestWEBAPI_DAL.csproj
+++ b/stankinsv2/solution/GenerateAll/TestWEBAPI_DAL/TestWEBAPI_DAL.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestWebAPI_BL\TestWebAPI_BL.csproj" />
+  </ItemGroup>
+
 </Project>
