--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,9 +48,9 @@ jobs:
       clean: true
   
     - task: DotNetCoreInstaller@0
-      displayName: 'Use .NET Core sdk 2.1.503'
+      displayName: 'Use .NET Core sdk start from 2.1.503, then 2.2.100'
       inputs:
-         version: 2.2.100
+         version: 3.1.302
   
     - task: NuGetToolInstaller@0
     
