--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -435,12 +435,12 @@ jobs:
        cd stankinsv2/solution/
     displayName: 'cd to folder'
 
-  - task: DotNetCoreInstaller@0
-    displayName: 'Use .NET Core sdk 2.1.300'
+  - task:  UseDotNet@2
+    displayName: 'Use .NET Core sdk start from 2.1.503, then 2.2.100'
     inputs:
-        version: 2.2.100
+      packageType: sdk
+      version: 3.1.302
 
-  
   - task: NuGetToolInstaller@0
  
   - script: |
